crates/carta/tests/snapshots/golden_writer__native__links__autolink-decoded-label.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Link
        ( "" , [] , [] )
        [ Str "http://example.com/a%20b" ]
        ( "http://example.com/a%20b" , "" )
    ]
, Para
    [ Link
        ( "" , [] , [] )
        [ Str "http://example.com/a b" ]
        ( "http://example.com/a%20b" , "" )
    ]
]
