crates/carta/tests/snapshots/golden_writer__native__links__title-with-quote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Link
        ( "" , [] , [] )
        [ Str "x" ]
        ( "http://example.com/" , "a\"b title" )
    ]
, Para
    [ Link
        ( "" , [] , [] )
        [ Str "y" ]
        ( "http://example.com/" , "a\"b'c title" )
    ]
]
